--- a/Assignment 3.tex
+++ b/Assignment 3.tex
@@ -104,8 +104,8 @@ Bonus questions are indicated using the $\star$ mark.
 
 \textit{Please specify the following information before submission}:
 \begin{itemize}
-    \item Your Name: Geo Wang%  (put your name here)
-    \item Your NetID: yw7997% (put your NetID here)
+    \item Your Name:%  (put your name here)
+    \item Your NetID: % (put your NetID here)
 \end{itemize}
 
 
