--- a/Assignment 3.tex
+++ b/Assignment 3.tex
@@ -154,6 +154,8 @@ Let $T = (V,E)$ be a tree.
 For two vertices $u,v \in V$, we denote by $P_{u,v} \subseteq V$ the set of vertices on the (unique) simple path between $u$ and $v$ in $T$.
 Prove that for any three vertices $u,v,w \in V$, we have $|P_{u,v} \cap P_{v,w} \cap P_{u,w}| = 1$.
 
+%*************************
+%Note that this proof is problematic, You cannot assume the sequence of a1,a2 on the path.
 
 \hspace*{\fill}
 
@@ -180,6 +182,8 @@ Contradiction with the definition of tree! Therefore we prove the uniqueness of 
 
 Hence, for any three vertices $u,v,w \in V$, we have $|P_{u,v} \cap P_{v,w} \cap P_{u,w}| = 1$.
 
+%*************************
+%Note that this proof is problematic, You cannot assume the sequence of a1,a2 on the path.
 
 
 \problem{3: Maximum matching [20 pts]}
