--- a/Assignment 4/Assignment 4.tex
+++ b/Assignment 4/Assignment 4.tex
@@ -139,6 +139,27 @@ Hence, LHS $=0\cdot n=0=$ RHS
 
 QED
 
+\hspace*{\fill}
+
+(b)
+
+RHS is thr number of weays to move from $(0,0)$ to $(n+r+1-m,m)$ in the squared paper
+
+Let $(r,i)$ be the highest grid in the $r$th column in the route, then there are $C^i_{r+i}$ ways to reach it
+
+Since it is the highest in the $r$th column, then it must move to $(1+r,i)$
+
+Then we need to move to $(n+1+r-m,m)$
+, which has $C^{m-i}_{n+1+r-(1+r)-i}$ ways
+
+Hence, $\sum ^m _{i =0} C^{m-i}_{n-i} C^i_{r+i} = C_{n+r+1}^{m}$
+
+QED
+
+
+
+
+
 
 
 
@@ -155,7 +176,6 @@ The figure below shows that $f(5) = 5$.
 \begin{center}
     \includegraphics[height=5cm]{hw-fig-intersection.pdf}
 \end{center}
-
 
 \hspace*{\fill}
 
@@ -196,11 +216,12 @@ Hence $f(k+1) = f(k) + C^3_k = C^4_k+C^3_k = C^4_{k+1}$......(2)
 By (1)(2), we can conclude that $f(n) = C^4_n$ for $n\geq 4$ and $f(1) =f(2) =f(3) =0$
 
 
+
 \problem{3: Counting solutions [20 pts]}
 Let $n,s,k \in \mathbb{N}$.
 Consider the equation $x_1+x_2+\cdots+x_n = s$, where $x_1,\dots,x_n$ are variables.
 We want to count the solutions to this equation satisfying that $x_i \in \{0,1,\dots,k\}$ for all $i$.
-Prove that the number of such solutions is equal to $\binom{s+n-1}{n-1} - \sum_{i=1}^n (-1)^{i-1} \binom{n}{i} \binom{s-ik+n-1}{n-1}$.
+Prove that the number of such solutions is equal to $\binom{s+n-1}{n-1} - \sum_{i=1}^n (-1)^{i-1} \binom{n}{i} \binom{s-i(k+1)+n-1}{n-1}$.
 
 \hspace*{\fill}
 
@@ -226,13 +247,48 @@ $C^{n-1}_{s+n-1}-\sum ^n_{i=1} (-1)^{i-1 } C^i_nC^{n-1}_{s-i(k+1)+n-1}$
 
 QED
 
-
 \problem{4: Doubling sequences [20 pts]} 
 We say a sequence $(a_1,\dots,a_k)$ of positive integers is a \textit{doubling sequence} if $a_i \geq 2a_{i-1}$ for all $i \in \{2,3,\dots,k\}$.
 We want to count the doubling sequences whose last element is equal to a given number.
 Formally, for a positive integer $n$, let $f(n)$ denote the number of doubling sequences (of any length) ending with $n$.
 For example, we have $f(5) = 4$, since there are $4$ doubling sequences ending with $5$, namely, $(5)$, $(1,5)$, $(2,5)$, and $(1,2,5)$.
 Prove that $f(n) = f(n-1) + \alpha(n) \cdot f(\lfloor n/2 \rfloor)$, where $\alpha(n) = 0$ if $n$ is odd and $\alpha(n) = 1$ if $n$ is even.
+
+\hspace*{\fill}
+
+Pf:
+
+$f(1) = 1$ (i.e. $\{1\}$)
+
+$f(2) = 1$ (i.e. $\{1,2\},\{2\}$)
+
+$f(3) = 1$ (i.e. $\{1,3\},\{3\}$)
+
+
+Now consider the induction step:
+
+Suppose the statement $f(n) = f(n-1) + \alpha(n) \cdot f(\lfloor n/2 \rfloor)$ holds for $\forall n \in \mathbb{N^*}$, $n \leq k-1 $
+
+When $n = k$
+
+No matter whether $n$ is even or odd, we can simply change the last number in the sequence from $n-1$ to $n$ to create the doubling sequence.
+
+Now we include all the sequence who consists $n$ and $\lfloor \dfrac{n-1}{2}\rfloor$ 
+
+If $n$ is odd, $\lfloor \dfrac{n-1}{2}\rfloor = \lfloor \dfrac{n}{2}\rfloor$, already included
+
+But if $n$ is even, $\dfrac{n}{2}$, which is not in the sequences of $f(n-1)$, so we can to add $n$ into the sequences of $f(\dfrac{n}{2})$ to generate the sequences of $f(n)$
+
+Note that we can't add more because $\dfrac{n}{2}$ is the largest number satisfying $a_k \geq 2a_{k-1}$
+
+Therefore if $n$ is even, $f(n) = f(n-1)+ f(\dfrac{n}{2})$
+
+Hence, $f(n) = f(n-1) + \alpha(n) \cdot f(\lfloor n/2 \rfloor)$, where $\alpha(n) = 0$ if $n$ is odd and $\alpha(n) = 1$ if $n$ is even
+
+QED
+
+% However, there exists a new way to generate such sequence if $n$ is even, which is to add a n at the end of an 2, if and only if n is an even number.  It will createf n2 such sequences.
+
 
 \problem{5: Nice colorings of a disk [10+10 pts]} 
 We have a disk that is equally divided into $n$ sectors around the disk center.
@@ -246,13 +302,70 @@ A way to color the sectors under this constraint is called a \textit{nice $k$-co
 Our goal is to compute the number of nice $k$-colorings.
 Let $\textsc{Paint}_k(n)$ denote the number of nice $k$-colorings of a disk with $n$ sectors.
 \begin{enumerate}
-    \item Prove that $\textsc{Paint}_k(n) + \textsc{Paint}_k(n-1) = k(k-1)^{n-1}$.
-    \item Based on the result of (a), further prove that $\textsc{Paint}_k(n) = k \sum_{i=1}^{n} (-1)^{i-1} (k-1)^{n-i}$.
+    \item Prove that $\textsc{Paint}_k(n) + \textsc{Paint}_k(n-1) = k(k-1)^{n-1}$ if $ n\geq 3$.
+    \item Based on the result of (a), further prove that $\textsc{Paint}_k(n) = k \sum_{i=1}^{n-1} (-1)^{i-1} (k-1)^{n-i}$ if $n \geq 2$.
 \end{enumerate}
 
 \begin{center}
     \includegraphics[height=5cm]{hw-fig-sector.jpg}
 \end{center}
+
+
+\hspace*{\fill}
+
+Pf:
+
+(a)
+
+Obviously,
+$\textsc{Paint}_k(2) = k(k-1)$
+
+While calculating $\textsc{Paint}_k(n)$:
+
+\qquad The first sector has $k$ choices of colours, the second one has $k-1$ choices of colours, the third one has $k-1$ choices of colours, the fourth one has $k-1$ choices of colours, ...... , the last one also has $k-1$ choices
+
+However, it might have the same colour with the first sector, and in this case if we can imagine that combining the first and the last sector together, and its number is exaclty $\textsc{Paint}_k(n-1)$
+
+Hence, $\textsc{Paint}_k(n) = k(k-1)^{n-1}-\textsc{Paint}_k(n-1)$ if $ n> 2$
+
+Which implies that $\textsc{Paint}_k(n) + \textsc{Paint}_k(n-1) = k(k-1)^{n-1}$ if $ n\geq 3$
+
+QED
+
+\hspace*{\fill}
+
+(b)
+
+We first list all of the formula:
+
+$\textsc{Paint}_k(n) + \textsc{Paint}_k(n-1) = k(k-1)^{n-1}$
+
+$\textsc{Paint}_k(n-1) + \textsc{Paint}_k(n-2) = k(k-1)^{n-2}$
+
+$\textsc{Paint}_k(n-2) + \textsc{Paint}_k(n-3) = k(k-1)^{n-3}$
+
+\qquad  $\vdots$
+
+$\textsc{Paint}_k(3) + \textsc{Paint}_k(2) = k(k-1)^{2}$
+
+$\textsc{Paint}_k(2) \qquad \qquad \qquad  = k(k-1)$
+
+If we add the first equation, minus the second, add the third, minus the fourth $\cdots$
+
+We almost eliminate everything except $\textsc{Paint}_k(2)$ and $\textsc{Paint}_k(n)$
+
+That is $\textsc{Paint}_k(n) + (-1)^{n-3}\textsc{Paint}_k(2)= \sum _{i=1}^{n-2} k(-1)^{i-1}(k-1)^{n-i}$
+
+Therefore $\textsc{Paint}_k(n)= \sum _{i=1}^{n-2} k(-1)^{i-1}(k-1)^{n-i} + (-1)^{n-2}\textsc{Paint}_k(2)$
+
+= $\sum _{i=1}^{n-2} k(-1)^{i-1}(k-1)^{n-i} + (-1)^{n-2}k(k-1)$
+
+$= \sum_{i=1}^{n-1} k(-1)^{i-1} (k-1)^{n-i}$ \qquad(if $n \geq 2$)
+
+QED
+
+
+
 
 \problem{6: Bonus questions [20$^\star$ pts]}
 
